# walour

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  DEV_NOTES.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpage-plan.md
.planning/: ROADMAP.md  STATE.md  model-cost-strategy.md
.planning/phases/04-extension-overlay-redesign/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-RESEARCH.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-scan-accuracy-transaction-simulation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-UAT.md  05-VERIFICATION.md
.planning/phases/06-detection-hardening/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-SUMMARY.md  06-04-SUMMARY.md  06-UAT.md  (+1 more)
apps/extension/: .env.example  manifest.json  options.html  package.json  popup.html  test-trigger.html  tsconfig.json  vite.config.ts
apps/web/: .env.example  next.config.mjs  package.json  tsconfig.json
apps/worker/: .env.example  README.md  package.json  server.ts  tsconfig.json  vercel.json
docs/: DEMO_SCRIPT.md  JUPITER_DX_REPORT.md  ROADMAP.md  architecture.md  brand.md  colosseum-score.md  current-architecture-diagram.md  plan-phase-01.md  plan-phase-02.md  plan-phase-03.md
programs/walour_oracle/: Cargo.toml
programs/walour_oracle/src/: lib.rs
scripts/: init-oracle.ts  seed-reports.ts
tests/: walour_oracle.ts
(+127 files in other folders)
